Fixed alignment of modal and styling

--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@
 
   main{
     display:grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-column:1/4;
     grid-row:2/3;
     .cardContainer{
@@ -76,7 +76,39 @@
 
   dialog{
     margin:auto;
+    width:50ch;
+    padding:0;
   }
+  .form-row{
+    display:flex;
+    margin-top:20px;
+    label{
+      width:100px;
+      text-align: right;
+      padding-right:20px;
+      text-wrap:nowrap;
+    }
+  }
+  legend{
+    margin-left: 100px;
+    font-size:1.5em;
+    padding:1em;
+    padding-left:0;
+  }
+#readOrNot{
+  margin-left:100px;
+}
+form{
+  background-color: #F6F7F8;
+  padding:1em;
+  button{
+  background-color: #0ea5e9;
+  color: white;
+  border-radius: 5px;
+  margin-left:100px;
+  }
+}
+
 
   .icons{
     display:flex;
